[gd_scene load_steps=26 format=2]

[ext_resource path="res://Art/Enemies/SpiderTurtle.png" type="Texture" id=1]
[ext_resource path="res://Art/Shadows/MediumShadow.png" type="Texture" id=2]
[ext_resource path="res://prefabs/Collision/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Enemies/Enemy.gd" type="Script" id=4]
[ext_resource path="res://prefabs/Mechanics/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://prefabs/Mechanics/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://prefabs/Collision/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://prefabs/Collision/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://prefabs/Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://Shaders/WhiteShader.gdshader" type="Shader" id=10]
[ext_resource path="res://prefabs/UI/ExtraHealthBar.tscn" type="PackedScene" id=11]

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 20, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 20, 0, 20, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 20, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 20, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 3.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.0
height = 2.0

[sub_resource type="CircleShape2D" id=9]
radius = 80.0

[sub_resource type="CircleShape2D" id=10]
radius = 5.0

[sub_resource type="CircleShape2D" id=11]
radius = 4.0

[sub_resource type="Animation" id=15]
length = 0.001

[sub_resource type="Animation" id=12]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=13]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Spider" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )
KNOCKBACK_SPEED = 60
ACCELERATION = 400
MAX_SPEED = 35

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 14 )
frames = SubResource( 1 )
animation = "Walk"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8
offset = Vector2( 0, 0 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 40.0
damage = 15.0
physicalDamageNegation = 0.45
useStamina = false

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.156863 )
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 11 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 15 )
anims/Start = SubResource( 12 )
anims/Stop = SubResource( 13 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 32.0

[node name="Timer" type="Timer" parent="NavigationAgent2D"]
wait_time = 0.5
autostart = true

[node name="ExtraHealthBar" parent="." instance=ExtResource( 11 )]
margin_left = -7.0
margin_top = -13.0
margin_right = 8.0
margin_bottom = -9.0

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invencibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invencibility_ended"]
[connection signal="invencibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invencibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="NavigationAgent2D/Timer" to="." method="_on_Timer_timeout"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
[editable path="WanderController"]
